Fixed bug with segment overflow

--- a/public/style.css
+++ b/public/style.css
@@ -88,6 +88,10 @@ body {
     color: blue;
 }
 
+.ui.segment {
+    overflow: hidden;
+}
+
 #editMultiBtn {
     position: absolute;
     right: 0px;
